# fevdecode

./: .gitignore  README.md  gen_all.bat  pyproject.toml  requirements.txt
scripts/: run_sample_compare.py
src/fevdecode/: __init__.py  cli.py  fdp.py  fdp_project.py  mpeg.py  parser.py  test.py
src/fevdecode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
temp/: basic.fdp.bak  basic3dsound.fdt  sora.fdp.bak
temp/sora/: sora.fdp
temp/sound/: basic_sfx.fsb  sora.fev  sora.txt
temp/sound/.fsbcache/: SR000009_24D512A058DDB9BF.fobj  SR000011_12D986C2D9618E29.fobj  SR010518_6789DDB0AEC7F85B.fobj  SR011499_A663533750E035A8.fobj  SR030149_ED86DCA5F4223FD5.fobj  SR030268_B8414B3EAECC4BCA.fobj  SR030277_C687C5B1C73DAE57.fobj
